[package]
name = "pi_export_astar"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[features]
default = ["pi_js_export"]
pi_js_export = []

[dependencies]
paste = "1.0"
pi_path_finding = "0.5"
bytemuck = { version = "1.4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}