[package]
name = "pi_export_base"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[features]
default = ["pi_js_export", "wasm_bindgen"]
pi_js_export = []
wasm_bindgen = []
# system_graph = [] # 提供接口，返回system的日程图

[dependencies]
paste = "1.0"
pi_atom = "0.2"
pi_hash="0.1"
log = "0.4"
serde_json = "1.0"
derive_deref = "1.1"
pi_export_macro = {path="../macro"}
pi_share = {version="0.4"}
pi_assets = "0.13"
pi_hal = {version = "0.1", registry = "yn"}
bevy_ecs = "0.11"
bevy_app = {version = "0.11", default_features = false}
bevy_a11y = "0.11"
bevy_window = {version = "0.1", registry = "yn", package = "pi_bevy_window" }
pi_bevy_asset = {version = "0.1", registry = "yn"}
pi_bevy_render_plugin = {version = "0.1", registry = "yn"}
pi_bevy_winit_window = {version = "0.1", registry = "yn"}
pi_bevy_post_process= {version = "0.1", registry = "yn"}
pi_window_renderer = {version = "0.1", registry = "yn"}
pi_bevy_log = {version = "0.1", registry = "yn"}
pi_render = {version = "0.1", registry = "yn"}
pi-async-rt = {version = "0.1"}
js_proxy_gen_macro = { registry = "yn", version = "0.2" }
tracing-subscriber = "0.3"
# bevy_mod_debugdump = "0.8"
wgpu = {version = "0.1", registry = "yn", package="pi_wgpu"}
tracing = "0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
web-sys = {version="0.3", features = [
	"HtmlCanvasElement"
]}
wgpu1 = { version = "0.16", package = "wgpu", default-features = false, features = ["glsl", "webgl"] }
pi_winit = {version = "0.27", registry="yn", package="winit"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu1 = { version = "0.16", package = "wgpu", default-features = false, features = ["glsl"] }

