[package]
name = "pi_export_gui"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"


[features]
default = ["pi_js_export"]
pi_js_export = []
trace = ["pi_ui_render/trace"]
record = ["pi_ui_render/debug"]

[dependencies]

pi_export_base = {path="../base"}
pi_export_play ={path="../play"}
pi_idtree={ git = "https://github.com/GaiaWorld/pi_idtree.git" }
pi_ui_render = {git = "https://github.com/GaiaWorld/pi_ui_render.git", branch="bevy", features=["debug"]}
bitflags="1.2"
tracing="0.1"
tracing-core = "0.1"
serde_json = "1.0"
pi_print_any= "0.1"
pi_slotmap = "0.1"
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "1.4"
derive_deref = "1.1"
paste = "1.0"
postcard = {version = "1.0", features = ["use-std"]}
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
fxhash = "0.2.1"
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
log={version = "0.4"}
# log={version = "0.4", features=["release_max_level_warn"]}
# , features = ["release_max_level_warn", "max_level_warn"]
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
cssparser = "0.29"
pi_hash="0.1" 
pi_atom={version="0.2", features = ["serde", "pointer_width_32"]}
pi_enum_default_macro="0.1"
pi_map="0.1"
pi_null="0.1"
pi_ucd="0.1"
pi_data_view = "0.1"
futures = "0.3"
pi_polygon = "0.1"
geo = "0.23"
pi_cg2d = "0.3"
crossbeam="0.8"
pi_graph = "0.1"
fixedbitset = {version="0.4", features = ["serde"]}
bytemuck = { version = "1.4", features = ["derive"] }
naga = { version = "0.11"}
pi_assets = "0.13"
image = "0.24"
polygon2 = "0.3"
json ="0.12"
pi_slab="0.1"
pi_slotmap_tree ="0.3"
pi_dirty="0.1"

# pi_flex_layout = { git = "https://github.com/GaiaWorld/pi_flex_layout.git" }
pi_flex_layout = "0.2"
pi_spatial = { git = "https://github.com/GaiaWorld/pi_spatial.git" }
# pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
# pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_hal={git="https://github.com/GaiaWorld/pi_hal.git"}
js_proxy_gen_macro={git="https://github.com/GaiaWorld/pi_lib.git"}
pi_postprocess={git="https://github.com/GaiaWorld/pi_post_process.git"}
pi_curves = { git="https://github.com/GaiaWorld/pi_curves.git"}
pi_animation = {git="https://github.com/GaiaWorld/pi_animation.git"}
pi_style = { git = "https://github.com/GaiaWorld/pi_style.git"}
pi_densevec = "0.1.2"
pi_futures="0.1"
pi_time = "0.3"
siphasher = {version="0.3", features=["serde_no_std"]}

winit = {git = "http://ser.yinengyun.com:10082/tech/winit.git"}
pi_bevy_post_process= { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_ecs_extend = { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_render_plugin = { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_asset = { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_winit_window = { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_window_renderer = { git = "https://github.com/GaiaWorld/pi_render_bevy.git"}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
bevy = {version="0.10", default-features = false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
# pi_share = {version="0.4", features=["serial", "rc"]}
pi_share = {version="0.4"}
pi-async-rt = {version = "0.1", features = ["serial"]}
web-sys = {version="0.3", features = [
	"HtmlCanvasElement"
]}
js-sys = "0.3"
# wgpu = { version = "0.15", default-features = false, features = ["glsl", "wgc"] }
# pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}
wgpu = { version = "0.15", default-features = false, features = ["glsl", "webgl"] }
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader", features=["webgl"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_share = {version="0.4"}
pi-async-rt = "0.1"
wgpu = { version = "0.15", default-features = false, features = ["glsl"] }
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }

[dev-dependencies]
font_kit = {git="http://ser.yinengyun.com:10082/tech/font_kit.git"}
async-trait="0.1"

