[package]
name = "pi_export_gui"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"


[features]
default = ["pi_js_export"]
pi_js_export = []
trace = ["pi_ui_render/trace"]
record = ["pi_ui_render/debug"]

[dependencies]
pi_export_base = {path="../base"}
pi_export_play ={path="../play"}
pi_ui_render = {version = "0.1.42", registry = "yn"}
bitflags="1.2"
tracing="0.1"
tracing-core = "0.1"
serde_json = "1.0"
pi_print_any= "0.1"
pi_slotmap = "0.1"
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "1.4"
derive_deref = "1.1"
paste = "1.0"
postcard = {version = "1.0", features = ["use-std"]}
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
fxhash = "0.2.1"
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
log={version = "0.4"}
# log={version = "0.4", features=["release_max_level_warn"]}
# , features = ["release_max_level_warn", "max_level_warn"]
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
cssparser = "0.29"
pi_hash="0.1" 
pi_atom={version="0.5", features = ["serde", "pointer_width_32", "lookup_by_hash"]}
pi_enum_default_macro="0.1"
pi_map="0.2"
pi_null = "0.1"
pi_ucd="0.1"
pi_data_view = "0.1"
futures = "0.3"
pi_polygon = "0.1"
pi_cg2d = "0.3"
crossbeam="0.8"
fixedbitset = {version="0.4", features = ["serde"]}
bytemuck = { version = "1.4", features = ["derive"] }
naga = { version = "0.19"}
pi_assets = "0.13"
image = "0.24"
polygon2 = "0.3"
json ="0.12"
pi_slotmap_tree ="0.3"

pi_flex_layout = "0.2"
pi_spatial = "0.5"
pi_hal = {version = "0.1", registry = "yn"}
js_proxy_gen_macro = { registry = "yn", version = "0.2" }
pi_postprocess = {version = "0.1", registry = "yn"}
pi_curves = {version = "0.1", registry = "yn"}
pi_animation = {version = "0.1", registry = "yn"}
pi_style = {version = "0.1", registry = "yn"}
pi_futures="0.1"
pi_time = "0.3"
siphasher = {version="0.3", features=["serde_no_std"]}

winit = { registry = "yn", version = "0.27"}
pi_bevy_post_process= {version = "0.1", registry = "yn"}
pi_bevy_ecs_extend = {version = "0.1", registry = "yn"}
pi_bevy_render_plugin = {version = "0.1", registry = "yn"}
pi_bevy_asset = {version = "0.1", registry = "yn"}
pi_bevy_winit_window = {version = "0.1", registry = "yn"}
# bevy_ecs = "0.11"
# bevy_app = {version = "0.11", default_features = false}
pi_world = "0.1.20"
wgpu = {version = "0.1", registry = "yn", package="pi_wgpu"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
uuid = { version = "1", features = ["js"] }
# pi_share = {version="0.4", features=["serial", "rc"]}
pi_share = {version="0.4", features=["serial"] } # 更新的版本有问题，暂时回退
pi-async-rt = {version = "0.1", features = ["serial"]}
web-sys = {version="0.3", features = [
	"HtmlCanvasElement"
]}
js-sys = "0.3"
# wgpu = { version = "0.19", default-features = false, features = ["glsl", "wgc"] }
# pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}

pi_render = { version = "0.1", registry = "yn", features=["webgl"] }
pi_bevy_log = {version = "0.1", registry = "yn"}
# tracing_chrome_wasm = { path="../../../tracing-chrome", package="tracing-chrome"}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_share = {version="0.4"}
pi-async-rt = "0.1"
pi_render = { version = "0.1", registry = "yn" }
vm_builtin = { git = "http://ser.yinengyun.com:10082/tech/pi_v8.git", branch = "pi_app_new" }
v8 = { git = "http://ser.yinengyun.com:10082/tech/v8.git" }

[dev-dependencies]
font_kit = { registry = "yn", version = "=0.1.0" }

