[package]
name = "pi_spine_export"
version = "0.0.1"
authors = ["baip0002 <bp950722@outlook.com>"]
edition = "2021"
description = "Animation Runtime Library"
repository = "https://github.com/GaiaWorld/pi_export"
license = "MIT OR Apache-2.0"
keywords = [""]

[features]
default = ["pi_js_export"]
pi_js_export = []

[dependencies]
bevy = { version="0.10", default-features = false}
pi_bevy_asset = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_render_plugin = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_ecs_extend = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_window_renderer = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
wgpu = { version = "0.15", default-features = false }
js_proxy_gen_macro = { git = "https://github.com/GaiaWorld/pi_lib.git" }

pi_hash = "0.1"
pi_atom = "0.2"
pi_assets = "0.13"
# pi_export_gui = { path = "../gui" }
pi_export_base = { path = "../base" }
pi_spine_rs = { git = "https://github.com/GaiaWorld/pi_spine_rs.git" }
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
pi_web_logger = {git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git"}

log="0.4"
js-sys = "0.3"
web-sys = {version="0.3", features = [
	"HtmlCanvasElement"
]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.15", default-features = false, features = ["glsl", "webgl"] }
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader", features=["webgl"] }
pi-async-rt = {version = "0.1", features = ["serial"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
