[package]
name = "pi_spine_export"
version = "0.0.1"
authors = ["baip0002 <bp950722@outlook.com>"]
edition = "2021"
description = "Animation Runtime Library"
repository = "https://github.com/GaiaWorld/pi_export"
license = "MIT OR Apache-2.0"
keywords = [""]

[features]
default = ["pi_js_export"]
pi_js_export = []

[dependencies]
# bevy_ecs = "0.11"
pi_bevy_asset = {version = "0.1", registry = "yn"}
pi_bevy_render_plugin = {version = "0.1", registry = "yn"}
pi_bevy_ecs_extend = {version = "0.1", registry = "yn"}
pi_window_renderer = {version = "0.1", registry = "yn"}
wgpu = {version = "0.1", registry = "yn", package="pi_wgpu"}
js_proxy_gen_macro = { registry = "yn", version = "0.2" }

pi_hash = "0.1"
pi_atom = "0.5"
pi_assets = "0.14"
# pi_export_gui = { path = "../gui" }
pi_export_base = { path = "../base" }
pi_spine_rs = {version = "0.0.6", registry = "yn"}
pi_hal = { version = "0.1", registry = "yn" }
pi_render = { version = "0.1", registry = "yn" }

log="0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pi_render = { version = "0.1", registry = "yn" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_render = { version = "0.1", registry = "yn" }
