[package]
name = "pi_export_quad_tree"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[features]
default = ["pi_js_export"]
pi_js_export = []


[dependencies]
# wee_alloc = { version = "0.4", optional = true }
nalgebra = "0.30.0"
ncollide2d = "0.33.0"
num-traits = "0.2.14"
pi_spatialtree = { git = "https://github.com/GaiaWorld/pi_spatialtree.git" }
bytemuck = { version = "1.4", features = ["derive"] }
pi_slotmap = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}