[package]
name = "pi_render_base_export"
version = "0.0.1"
authors = ["baip0002 <bp950722@outlook.com>"]
edition = "2021"
description = "Animation Runtime Library"
repository = "https://github.com/GaiaWorld/pi_export"
license = "MIT OR Apache-2.0"
keywords = [""]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pi_js_export"]
pi_js_export = []

[dependencies]
bevy = { version="0.9", default-features = false, features=["bevy_winit"] }
pi_bevy_asset = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_render_plugin = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_ecs_extend = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_final_render_target = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
wgpu = { version = "0.14" }

pi_hash = "0.1"
pi_export_base = { path = "../base" }
pi_spine_rs = { path="../../../pi_spine_rs" }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.14", features = ["spirv", "glsl", "webgl"] }
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader", features=["webgl"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
