[package]
name = "scene3d_export"
version = "0.0.1"
authors = ["baip0002 <bp950722@outlook.com>"]
edition = "2021"
description = "scene 3d export"
repository = "https://github.com/GaiaWorld/pi_export"
license = "MIT OR Apache-2.0"
keywords = [""]

[features]
default 				= ["pi_js_export"]
pi_js_export 			= []

[dependencies]
wgpu 					= { version = "0.16", default-features = false }
bevy 					= { version = "0.11", default-features = false}
pi_bevy_asset 			= { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_render_plugin 	= { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_ecs_extend 		= { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_winit_window    = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_window_renderer 		= { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
derive_deref            = "1.1"

pi_hash 				= "0.1"
pi_slotmap              = "0.1"
pi_atom 				= "0.2"
pi_assets 				= "0.13"
pi_export_base 			= { path = "../base" }
pi_hal 					= { git = "https://github.com/GaiaWorld/pi_hal.git" }
pi_render 				= { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
log						= "0.4"
pi_web_logger 			= { git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git" }

pi_scene_math           = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_animation            = { git = "https://github.com/GaiaWorld/pi_animation.git" }
pi_curves               = { git = "https://github.com/GaiaWorld/pi_curves.git" }

pi_3d 		            = { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_engine_shell 		= { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_node_materials 		= { git = "https://github.com/GaiaWorld/pi_3d.git" }
default_render 			= { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_scene_context 		= { git = "https://github.com/GaiaWorld/pi_3d.git" }
unlit_material 			= { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_mesh_builder 		= { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_gltf2_load           = { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_particle_system      = { git = "https://github.com/GaiaWorld/pi_3d.git" }
pi_trail_renderer       = { git = "https://github.com/GaiaWorld/pi_3d.git" }

bytemuck                = { version = "1.4", features = [ "derive" ] }
js-sys 					= "0.3"
web-sys 				= { version="0.3", features = [ "HtmlCanvasElement" ] }
wasm-bindgen 			= { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures 	= { version = "0.4" }
js_proxy_gen_macro      = { registry = "yn", version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu 					= { version = "0.16", default-features = false, features = ["glsl"] }
pi_render 				= { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}
pi-async-rt 		    = { version = "0.1", features = ["serial"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pi_render 				= { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
