[package]
name = "scene3d_export"
version = "0.0.1"
authors = ["baip0002 <bp950722@outlook.com>"]
edition = "2021"
description = "scene 3d export"
repository = "https://github.com/GaiaWorld/pi_export"
license = "MIT OR Apache-2.0"
keywords = [""]

[features]
default 				= ["pi_js_export"]
pi_js_export 			= []

[dependencies]
wgpu                    = { version = "0.1", registry = "yn", package = "pi_wgpu" }
bevy_ecs                = "0.11"
paste = "1.0"
pi_bevy_asset 			= { version = "0.1", registry = "yn" }
pi_bevy_render_plugin 	= { version = "0.1", registry = "yn" }
pi_bevy_ecs_extend 		= { version = "0.1", registry = "yn" }
pi_bevy_winit_window    = { version = "0.1", registry = "yn" }
pi_window_renderer 		= { version = "0.1", registry = "yn" }
derive_deref            = "1.1"

pi_hash 				= "0.1"
pi_slotmap              = "0.1"
pi_atom 				= "0.5"
pi_assets 				= "0.14"
pi_export_base 			= { path = "../base" }
pi_hal 					= { version = "0.1", registry = "yn" }
log						= "0.4"
pi_render               = { version = "0.1", registry = "yn", features=["webgl"] }
pi_world = "0.1"

pi_scene_math           = { version = "0.0.3", registry = "yn" }
pi_animation            = { version = "0.1", registry = "yn" }
pi_curves               = { version = "0.1", registry = "yn" }

pi_3d 		            = { version = "1.0.0", registry = "yn" }
pi_scene_shell 		    = { version = "1.0.0", registry = "yn" }
pi_node_materials 		= { version = "1.0.0", registry = "yn" }
pi_scene_context 		= { version = "1.0.0", registry = "yn" }
pi_mesh_builder 		= { version = "1.0.0", registry = "yn" }
pi_gltf2_load           = { version = "1.0.0", registry = "yn" }
pi_particle_system      = { version = "1.0.0", registry = "yn" }
pi_trail_renderer       = { version = "1.0.0", registry = "yn" }

bytemuck                = { version = "1.4", features = [ "derive" ] }

js_proxy_gen_macro      = { registry = "yn", version = "0.2" }
ahash = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pi-async-rt 		    = { version = "0.1", features = ["serial"] }
wasm-bindgen 			= { version = "0.2", features = ["serde-serialize"] }
js-sys 					= "0.3"
web-sys 				= { version="0.3", features = [ "HtmlCanvasElement" ] }
wasm-bindgen-futures 	= { version = "0.4" }
