[package]
name = "pi_export_system"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"


[features]
default = ["pi_js_export"]
pi_js_export = []

[dependencies]
pi_export_base = { path = "../base" }
winit = { registry = "yn", version = "0.27"}
js_proxy_gen_macro = { registry = "yn", version = "0.2" }
pi_bevy_render_plugin = {version = "0.1", registry = "yn"}
pi_bevy_winit_window = {version = "0.1", registry = "yn"}
pi_share = {version="0.4" }